<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inbox"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:id="@+id/inbox_inner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/home_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_button"/>
            <Button
                android:id="@+id/create_email_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_email_button"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/home_button"
                android:layout_toEndOf="@+id/home_button" />
            <Button
                android:id="@+id/refresh_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh_button"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/edit_button"
                android:layout_toLeftOf="@+id/edit_button"/>
            <Button
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <ListView
            android:id="@+id/email_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/edit_button"
            android:layout_weight="1">
        </ListView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/check_all_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_all_button"
                android:visibility="gone"/>
            <Button
                android:id="@+id/mark_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mark_button"
                android:layout_toRightOf="@+id/check_all_button"
                android:visibility="gone"/>
            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_button"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>