<?xml version="1.0" encoding="utf-8"?>
<!-- Staff Office Hours scraper layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <!-- Title bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_button"
            android:src="@drawable/home_icon"
            android:background="@drawable/rounded_button"
            />
        <TextView
            android:id="@+id/hours_title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hours_title_view"
            android:textSize="20dp"
            android:paddingLeft="25dp"
            android:paddingTop="1dp"/>
    </LinearLayout>
    <!-- Header Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/horizontal_divider">
        <TextView
            android:id="@+id/lecturer_text_view_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lecturer_text_view_header"
            android:layout_weight="0"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_margin="3dp"/>
        <TextView
            android:id="@+id/hours_text_view_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_text_view_header"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_margin="3dp"/>
        <TextView
            android:id="@+id/updated_text_view_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updated_text_view_header"
            android:layout_weight="0"
            android:gravity="center"
            android:padding="10dp"
            android:layout_margin="3dp"/>/>

    </LinearLayout>
    <!-- Office Hours List -->
    <ListView
        android:id="@+id/staff_hours_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"></ListView>
</LinearLayout>