<?xml version="1.0" encoding="utf-8"?>
<!-- Timetable scraper layout -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/timetable_scraper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <!-- Buttons Bar -->
    <Button
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/home_button" />
    <Button
        android:id="@+id/next_week_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/next_week_button"
        android:layout_alignParentRight="true" />
    <Button
        android:id="@+id/previous_week_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/next_week_button"
        android:text="@string/previous_week_button"
        android:layout_toLeftOf="@+id/next_week_button" />
    <!-- Time table view -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:layout_weight="1"
        android:padding="10dp"
        android:layout_below="@id/next_week_button">
        <HorizontalScrollView
            android:id="@+id/hScroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <!-- Time table table -->
            <TableLayout
                android:id="@+id/lecture_timetable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1,2,3,4">
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>
</RelativeLayout>
