<?xml version="1.0" encoding="utf-8"?>
<!-- Coursework Menu Layout -->
<!-- Menu Button List -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coursework_menu"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="46dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:text="@string/home_button"
        android:src="@drawable/home_icon"
        android:background="@drawable/rounded_button" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/current_cw_icon"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:src="@drawable/current_coursework_icon" />
        <Button
            android:id="@+id/current_cw_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/current_cw_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp">
        <ImageView
            android:id="@+id/received_cw_icon"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:src="@drawable/received_coursework_icon" />
        <Button
            android:id="@+id/received_cw_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/received_cw_button"
            android:background="@drawable/rounded_button" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp">
        <ImageView
            android:id="@+id/future_cw_icon"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:src="@drawable/future_coursework_icon" />
        <Button
            android:id="@+id/future_cw_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/future_cw_button"
            android:background="@drawable/rounded_button" />
    </LinearLayout>
</LinearLayout>