<?xml version="1.0" encoding="utf-8"?>
<!-- Login page layout -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/login_image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/swansea_uni_logo"/>
    <!-- Input boxes -->
    <EditText
        android:id="@+id/username_input_field"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/username_input_field"
        android:focusable="true"
        android:layout_marginTop="51dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_edit_text"
        android:paddingLeft="30dp"
        android:layout_below="@+id/login_image_logo"
        android:layout_alignLeft="@+id/password_input_field"
        android:layout_alignStart="@+id/password_input_field" />
    <EditText
        android:id="@+id/password_input_field"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:focusable="true"
        android:layout_marginTop="10dp"
        android:layout_below = "@+id/username_input_field"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true"
        android:hint="@string/password_input_field"
        android:background="@drawable/rounded_edit_text"
        android:layout_margin="10dp"
        android:paddingLeft="30dp"/>/>
    <!-- Submit button -->
    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_below="@id/password_input_field"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_progress_bar"
        android:layout_alignParentRight="true"
        android:text="@string/login_button"
        android:background="@drawable/rounded_button"
        android:layout_margin="10dp"/>
</RelativeLayout>